--- a/helper/CMakeLists.txt
+++ b/helper/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 # Includes
 include_directories(
     "../externals/glslang"
+    "../externals/SPIRV-Tools/external/include"
 )
 
 # Library
